# Mandelbrot-set-neural-net

./: .gitignore  MandelbrotNeuralNetwork_FourierFeatures.ipynb  README.md  experiment.ipynb  main.ipynb  make_gif.ipynb  pyproject.toml  requirements.txt  visualization.py
experiments/configs/: default.json
notebooks/: MandelbrotNeuralNetwork.ipynb  MandelbrotNeuralNetwork_FourierFeatures.ipynb
src/mandelbrot_nn/: __init__.py  data.py  mandelbrot.py  models.py  palettes.py  render.py  train.py  utils.py
src/scripts/: make_media.py  train.py
