[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mandelbrot-nn"
version = "0.1.0"
description = "Implicit neural representation of the Mandelbrot set"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "matplotlib",
  "scikit-learn",
  "pillow",
  "imageio",
  "imageio-ffmpeg"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
